# docs/swagger.yaml
@@ -140,6 +140,8 @@ definitions:
         type: string
       name:
         type: string
+      os_name:
+        type: string
       proxy:
         $ref: '#/definitions/github_com_EvolutionAPI_evolution-go_pkg_instance_service.ProxyConfig'
       token:
@@ -7364,9 +7366,9 @@ paths:
       consumes:
       - application/json
       description: Creates a new instance with the provided data including optional
-        advanced settings
+        os_name and advanced settings
       parameters:
-      - description: Instance data with optional advanced settings
+      - description: Instance data with optional os_name and advanced settings
         in: body
         name: instance
         required: true
